Change token param

--- a/.github/workflows/sync-yourls-pot.yml
+++ b/.github/workflows/sync-yourls-pot.yml
@@ -23,7 +23,7 @@ jobs:
           repository: toineenzo/YOURLS-nl_NL
           ref: main
           path: target
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.YOURLS_POT }}
 
       - name: Sync official YOURLS.pot File
         run: |
