--- a/.github/workflows/sync-yourls-pot.yml
+++ b/.github/workflows/sync-yourls-pot.yml
@@ -25,17 +25,16 @@ jobs:
 
       - name: Sync official YOURLS.pot File
         run: |
-          # Compare files before copying to avoid unnecessary commits
-          if ! cmp -s source/YOURLS.pot target/YOURLS.pot; then
+          # Compare files and ALWAYS echo the result
+          if cmp -s source/YOURLS.pot target/YOURLS.pot; then
+            echo "No changes detected. Skipping commit."
+          else
             echo "Changes detected. Updating YOURLS.pot..."
             cp -f source/YOURLS.pot target/YOURLS.pot
             cd target
-
             git config --global user.name "github-actions[bot]"
             git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
             git add YOURLS.pot
             git commit -m "Sync official YOURLS.pot file from upstream"
             git push
-          else:
-            echo "No changes detected. Skipping commit."
           fi
