chore(convert-po-to-mo): Make manual run possible and cover all branches

--- a/.github/workflows/convert-po-to-mo.yml
+++ b/.github/workflows/convert-po-to-mo.yml
@@ -3,9 +3,8 @@ name: Convert PO to MO
 on:
   push:
     paths:
-      - 'nl_NL.po'
-    branches:
-      - main  # Change this if your default branch is different
+      - 'nl_NL.po' #run when .po file changes
+  workflow_dispatch: #or manually run
 
 jobs:
   convert-po-to-mo:
