--- a/.github/workflows/convert-po-to-mo.yml
+++ b/.github/workflows/convert-po-to-mo.yml
@@ -3,8 +3,8 @@ name: Convert PO to MO
 on:
   push:
     paths:
-      - 'nl_NL.po' #run when .po file changes
-  workflow_dispatch: #or manually run
+      - 'nl_NL.po'  # Triggers only when nl_NL.po is modified
+  workflow_dispatch:  # Allows manual triggering
 
 jobs:
   convert-po-to-mo:
@@ -15,7 +15,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install po2mo
-        run: pip install git+https://github.com/devjiwonchoi/po2mo.git
+        run: |
+          curl -fsSL https://raw.githubusercontent.com/devjiwonchoi/po2mo/main/scripts/install.sh | sh
+          echo "$HOME/.local/bin" >> $GITHUB_PATH  # Ensure installed binaries are accessible
 
       - name: Convert nl_NL.po to nl_NL.mo
         run: po2mo nl_NL.po nl_NL.mo
